--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <li>1) git init</li>
             <li>2) git status</li>
             <li>3) git add --all (tous les fichier) ou git add nom_fichier</li>
+            <li>4) git commit -m 'mon message ici'</li>
+            <li> 5)git remote add origin https://github.com/olfahosni</li>
+            <li>6) git push -u origin master </li>
         </ul>
 
 
